--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -32,6 +32,9 @@
 "kNFM" = "%@ 關注了你。";
 "kNCN" = "[%@] 開始了，趕緊參加吧！豐厚獎品等你來拿喲！";
 
+"kPALM" = "%@ 向你發了定位請求";
+"kPRLM" = "%@ 回復了你的定位請求";
+"kPRRLM" = "%@ 拒絕了你的定位請求";
 /*********************** Notification end *************************/
 
 
@@ -853,14 +856,23 @@
 "kOpusRank" = "排行";
 "kOpusNew" = "最新";
 
-"kUserLocationTitle" = "位置";
+"kAskLocationTitle" = "定位請求";
+"kReplyLocationTitle" = "回復請求";
+"kShowMyLocationTitle" = "我的位置";
+"kShowFriendLocationTitle" = "對方位置";
+"kGettingLocation" = "正在獲取當前位置...";
+
 "kAskLocationMessage" = "這是我的位置，讓我看看你在哪個位置？";
 "kReplyLocationMessage" = "回復了定位請求";
 "kRejectLocationMessage" = "拒絕了定位請求";
-"kReplyLocation" = "回复定位";
-"kRejectLocation" = "拒絕定位";
-"kShowLocation" = "顯示位置";
-"kSendLocation" = "發送我的位置";
+
+"kReplyLocation" = "回复定位請求";
+"kRejectLocation" = "拒絕定位請求";
+"kShowLocation" = "顯示對方位置";
+
+"kGetLocationFail" = "暫時無法定位,不能發送定位請求。";
+"kAskLocationAlert" = "確定發送定位請求，並且發送你的位置嗎？";
+"kReplyLocationAlert" = "確定回复定位請求，並且發送你的位置嗎?";
 
 
 "kContestPassed" = "已結束(%d)";
