add draw to user info; limit flower and tomato in result controller

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -867,6 +867,9 @@
 "kContestPendding" = "Pendding";
 "kNoContestTips" = "No Contest Now.";
 "kContestFeedDetail" = "Contest Opus";
+
+"kDrawToUserByUser" = "drew to %@";
+
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
@@ -1074,6 +1077,7 @@
 "kOpusMy" = "Mine";
 "kOpusRank" = "Top";
 "kOpusNew" = "New";
+
 
 /*********************** 大话骰子国际化字符串结束 *************************/
 
