--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -893,6 +893,7 @@
 "kContestPendding" = "未开始";
 "kNoContestTips" = "不好意思，目前没有适合您的比赛。";
 
+"kContestFeedDetail" = "作品详情";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
