--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -878,7 +878,7 @@
 "kContestPassed" = "已結束(%d)";
 "kContestPendding" = "未開始";
 "kNoContestTips" = "不好意思，目前沒有適合您的比賽。";
-
+"kContestFeedDetail" = "作品詳情";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
