update localization files

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -625,9 +625,7 @@
 "kDrawToHim" = "Draw Something";
 "kExploreHim" = "View Opus";
 "kPlayWithHim" = "Play with him(her)";
-"kChatToHim" = "Talk something";
-
-
+"kChatToHim" = "Say something";
 
 "kUserFeedTitle" = "%@'s Timeline";
 "kUserFeed" = "Timeline";
