--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -1077,7 +1077,7 @@
 "kCanotSendItemToContestOpus" = "You can't send the same item more than %d times on the same contest opus.";
 "kOpusMy" = "Mine";
 "kOpusRank" = "Top";
-"kOpusNew" = "New";
+"kOpusNew" = "Latest";
 
 
 /*********************** 大话骰子国际化字符串结束 *************************/
