update offline draw, another draw for contest.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -538,6 +538,9 @@
 "kSubmitSuccTitle" = "Submit Successfully";
 "kSubmitSuccMsg" = "Congratulations! Submit Successfully! One more?";
 
+"kContestSubmitSuccMsg" = "Thank you for your participation, you can submit other %d works, one more?";
+"kContestSubmitSuccQuitMsg" = "Thank you for your participation!";
+
 "kContestNotRunning" = "Sorry, the contest is not running now.";
 "kContesSummitCountEnough" = "Sorry. You can only summit %d opus to one contest";
 //"kDedutCoinChangeOpusAlertMessage" = "If you change the opus, the system will deduct 1 coin.";
