--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -548,6 +548,8 @@
 "kSubmitFailure" = "不好意思，提交失敗，請重新提交。";
 "kSubmitSuccMsg" = "恭喜！提交成功！再來一副？";
 "kSubmitSuccTitle" = "提交成功";
+"kContestSubmitSuccMsg" = "謝謝您的參與，還可以提交%d幅作品，再來一幅？";
+"kContestSubmitSuccQuitMsg" = "謝謝您的參與！";
 
 //"kDedutCoinChangeOpusAlertMessage" = "如果更換一副作品，系統將會扣除1個金幣哦。";
 //"kNoCoinChangeOpusMessage" = "更換作品需要扣除1個金幣，你的賬戶餘額不足，是不是現在購買一些金幣？";
