add iPhone5 project support

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -514,7 +514,7 @@
 "kCurrentItems" = "Items ";
 "kFreeGetCoins" = "Free Coins";
 
-"kCustomWordManage" = "Word Manage";
+"kCustomWordManage" = "My Words";
 "kAddCustomWord" = "Add Word";
 "kInputWord" = "Input Words";
 "kInputWordPlaceholder" = "Please input a new word";
