--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -898,6 +898,7 @@
 
 "kContestFeedDetail" = "作品详情";
 "kDrawToUserByUser" = "画给%@";
+"kCannotThrowAgain" = "歇歇吧，道具用太多了伤身";
 
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
