update contest and board.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -865,7 +865,7 @@
 
 
 "kContestPassed" = "Passed(%d)";
-"kContestPendding" = "Pendding";
+"kContestPending" = "Pending";
 "kNoContestTips" = "No Contest Now.";
 "kContestFeedDetail" = "Contest Opus";
 
