--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -893,7 +893,7 @@
 
 
 "kContestPassed" = "已结束(%d)";
-"kContestPendding" = "未开始";
+"kContestPending" = "未开始";
 "kNoContestTips" = "不好意思，目前没有适合您的比赛。";
 
 "kContestFeedDetail" = "作品详情";
