--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -678,6 +678,8 @@
 "kFeedStatus" = "新動態(%d)";
 "kRoomStatus" = "新房間邀請(%d)";
 "kMessageStatus" = "新消息(%d)";
+"kCommentStatus" = "新評論(%d)";
+"kDrawToMeStatus" = "新畫給我(%d)";
 
 "kOpusDelete" = "不好意思，這幅作品已經被刪除。";
 "kChatTitle" = "發送消息";
