--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -679,7 +679,10 @@
 "kRoomStatus" = "新房間邀請(%d)";
 "kMessageStatus" = "新消息(%d)";
 "kCommentStatus" = "新評論(%d)";
+"kReplyStatus" = "新回复(%d)";
 "kDrawToMeStatus" = "新畫給我(%d)";
+"kFlowerStatus" = "新鮮花(%d)";
+"kTomatoStatus" = "新番茄(%d)";
 
 "kOpusDelete" = "不好意思，這幅作品已經被刪除。";
 "kChatTitle" = "發送消息";
