--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -903,6 +903,7 @@
 
 "kContestFeedDetail" = "作品详情";
 "kDrawToUserByUser" = "画给%@";
+"kQQGroup" = "";
 
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
