add qqgroup in feedback

--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -903,7 +903,7 @@
 
 "kContestFeedDetail" = "作品详情";
 "kDrawToUserByUser" = "画给%@";
-"kQQGroup" = "";
+"kQQGroup" = "官方Q群：228119679";
 
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
