--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -887,6 +887,7 @@
 "kNoContestTips" = "不好意思，目前沒有適合您的比賽。";
 "kContestFeedDetail" = "作品詳情";
 "kDrawToUserByUser" = "畫給%@";
+"kQQGroup" = "官方Q群：228119679";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
