--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -875,7 +875,7 @@
 "kContestFeedDetail" = "Contest Opus";
 
 "kDrawToUserByUser" = "drew to %@";
-
+"kQQGroup" = "";
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
 
