--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -1068,7 +1068,7 @@
 
 "kSearchingRoom" = "Searching Room...";
 
-"kHasBought" = "Already Has";
+"kHasBought" = "Already Owned";
 "kRoomNameDuplicated" = "Room name duplicated.";
 
 "kSearchEmpty" = "No matched room";
