add online user count

--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -1095,6 +1095,6 @@
 
 "kSearchEmpty" = "找不到匹配的房间";
 "kNoFriendRoom" = "暂时没有好友房间";
-
+"kOnlineUser" = "在线%d人";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
