--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -1078,6 +1078,7 @@
 
 "kSearchEmpty" = "找不到匹配的房間";
 "kNoFriendRoom" = "暫時沒有好友房間";
+"kOnlineUser" = "在線%d人";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
 
