--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -1083,7 +1083,7 @@
 "kOpusMy" = "Mine";
 "kOpusRank" = "Top";
 "kOpusNew" = "Latest";
-
+"kOnlineUser" = "%d online";
 
 /*********************** 大话骰子国际化字符串结束 *************************/
 
