--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -1098,3 +1098,17 @@
 "kOnlineUser" = "在线%d人";
 /*********************** 大话骰子国际化字符串结束 *************************/
 
+
+
+/*********************** 炸金花国际化字符串开始 *************************/
+
+"kCardTypeHighCard" = "散牌";
+"kCardTypePair" = "对子";
+"kCardTypeStraight" = "顺子";
+"kCardTypeFlush" = "金花";
+"kCardTypeStraightFlush" = "顺金";
+"kCardTypeThreeOfAKind" = "豹子";
+"kCardTypeSpecial" = "特殊";
+"kCardTypeUnknow" = "未知";
+
+/*********************** 炸金花国际化字符串结束 *************************/
