--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -1118,5 +1118,6 @@
 "kCardTypeThreeOfAKind" = "豹子";
 "kCardTypeSpecial" = "特殊";
 "kCardTypeUnknow" = "未知";
-
+"kRemainTimes" = "离成熟还剩 %d 分 %d 秒";
+"kMatureMessage" = "摇钱树成熟了，快去点一下!";
 /*********************** 炸金花国际化字符串结束 *************************/
