--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -1103,4 +1103,5 @@
 "kCardTypeUnknow" = "未知";
 "kRemainTimes" = "離成熟還剩 %d 分 %d 秒";
 "kMatureMessage" = "搖錢樹成熟了，快去點一下!";
+"kZJHRoomTitle" = "詐金花";
 /*********************** 炸金花国际化字符串结束 *************************/
