--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -1125,8 +1125,8 @@
 
 "kZJHRoomTitle" = "诈金花%d号房";
 
-"kZJHTotalBet" = "总注";
-"kZJHSingleBet" = "单注";
+"kZJHTotalBet" = "总注:";
+"kZJHSingleBet" = "单注:";
 
 "kZJHBet" = "跟注";
 "kZJHRaise" = "加注";
