--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -1093,14 +1093,14 @@
 
 /*********************** 大话骰子国际化字符串结束 *************************/
 
-"kCardTypeHighCard" = "";
-"kCardTypePair" = "";
-"kCardTypeStraight" = "";
-"kCardTypeFlush" = "";
-"kCardTypeStraightFlush" = "";
-"kCardTypeThreeOfAKind" = "";
-"kCardTypeSpecial" = "";
-"kCardTypeUnknow" = "";
+"kCardTypeHighCard" = "散牌";
+"kCardTypePair" = "对子";
+"kCardTypeStraight" = "顺子";
+"kCardTypeFlush" = "金花";
+"kCardTypeStraightFlush" = "顺金";
+"kCardTypeThreeOfAKind" = "豹子";
+"kCardTypeSpecial" = "特殊";
+"kCardTypeUnknow" = "未知";
 
 "kRemainTimes" = "00:%02d:%02d";
 "kMatureMessage" = "Mature";
