--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -1117,5 +1117,6 @@
 "kZJHCheck" = "CHK";
 "kZJHCompare" = "CMP";
 "kZJHFold" = "Fold";
+"kShowCard" = "Show"
 
 /*********************** 炸金花国际化字符串结束 *************************/
