--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -1134,7 +1134,7 @@
 "kZJHCheck" = "看牌";
 "kZJHCompare" = "比牌";
 "kZJHFold" = "弃牌";
-"kShowCard" = "亮牌"
+"kShowCard" = "亮牌";
 
 
 /*********************** 炸金花国际化字符串结束 *************************/
