--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -1117,6 +1117,6 @@
 "kZJHCheck" = "看牌";
 "kZJHCompare" = "比牌";
 "kZJHFold" = "棄牌";
-"kShowCard" = "亮牌"
+"kShowCard" = "亮牌";
 
 /*********************** 炸金花国际化字符串结束 *************************/
