--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -1130,6 +1130,7 @@
 "kPublish" = "Publish";
 "kReward" = "Reward";
 "kSupport" = "Support";
+"kMyPost" = "My Post";
 
 "kSupportCount" = "Support(%d)";
 "kCommentCount" = "Comment(%d)";
@@ -1139,4 +1140,8 @@
 "kCommentMyPost" = "Comment my post: %@";
 "kReplyMyComment" = "Reply to my comment: %@";
 
+"kTextTooShot" = "Text length can't be less than %d!";
+"kTextTooLong" = "Text length can't be more than %d!";
+"kTextTooFrequent" = "You send post too frequent, wait a minute.";
+"kNetworkError" = "Network is error, please try it again";
 /*********************** BBS国际化字符串结束 *************************/
