--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -1118,5 +1118,5 @@
 "kZJHCompare" = "CMP";
 "kZJHFold" = "Fold";
 "kShowCard" = "Show";
-
+"kChangeCard" = "Change";
 /*********************** 炸金花国际化字符串结束 *************************/
