--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -1135,6 +1135,7 @@
 "kZJHCompare" = "比牌";
 "kZJHFold" = "弃牌";
 "kShowCard" = "亮牌";
+"kChangeCard" = "换牌";
 
 
 /*********************** 炸金花国际化字符串结束 *************************/
