--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -1118,5 +1118,6 @@
 "kZJHCompare" = "比牌";
 "kZJHFold" = "棄牌";
 "kShowCard" = "亮牌";
+"kChangeCard" = "換牌";
 
 /*********************** 炸金花国际化字符串结束 *************************/
